--- a/NLayer.Web/Views/Products/Index.cshtml
+++ b/NLayer.Web/Views/Products/Index.cshtml
@@ -2,7 +2,7 @@
 @{
 }
 @model List<ProductWithCategoryDto>
-
+<a class="btn btn-primary" asp-controller="Products" asp-action="Save">Save Product</a>
     <table class="table table-striped">
         <thead>
             <tr>
@@ -25,8 +25,8 @@
             <td>@item.Stock</td>
             <td>@item.Category.Name</td>
             <td>@item.CreatedDate</td>
-            <td><a class="btn btn-warning" asp-controller="Products" asp-action="Update" asp-route-id="@item.Id">Update</a></td>
-            <td><a class="btn btn-danger" asp-controller="Products" asp-action="Remove" asp-route-id="@item.Id">Delete</a></td>
+            <td><a class="btn btn-warning" asp-controller="Products" asp-action="Update" asp-route-id="@item.Id">Update</a>
+            <a class="btn btn-danger" asp-controller="Products" asp-action="Remove" asp-route-id="@item.Id">Delete</a></td>
             </tr>
         }
         </tbody>
